--- a/templates/index.html
+++ b/templates/index.html
@@ -107,20 +107,20 @@
 					</article>
 
 					<article>
-						<a href="#" class="image featured"><img class="cropped1" src="static/images/EV-temp.png" alt="" /></a>
+						<a href="#" class="image featured"><img class="cropped1" src="static/images/cdp.jpg" alt="" /></a>
 						<header>
-							<h3><a href="#">Supply Chain Analysis of Electric Vehicle Battery</a></h3>
+							<h3><a href="#">CO2 Emissions Reduction Advice for Automobile Clients</a></h3>
 						</header>
-						<p>Graph Network, Data Visualization</p>
-						<p>Undergoing</p>
+						<p>Excel, Data Analysis</p>
+						<p>CDP Database, Consulting Service</p>
 					</article>
 
 					<article>
-						<a href="#" class="image featured"><img class="cropped1" src="static/images/powerline.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img class="cropped1" src="static/images/gas.jpg" alt="" /></a>
 						<header>
-							<h3><a href="#">Forecast Electric Power Demand of Texas Cities</a></h3>
+							<h3><a href="#">Changing Climate & Consumer Behaviors</a></h3>
 						</header>
-						<p>Machine Learning</p>
+						<p>ABM Simulation Model</p>
 						<p>Undergoing</p>
 					</article>
 
@@ -182,7 +182,7 @@
 		<!--    CAROUSEL-->
 			<section class="carousel parttwo">
 				<div>
-					<h2>Business and Finance</h2>
+					<h2>Finance, Risk, and Business</h2>
 				</div>
 				<div class="reel">
 
@@ -196,13 +196,24 @@
 					</article>
 
 					<article>
-						<a href="#" class="image featured"><img class="cropped1" src="static/images/IMDB.png" alt="" /></a>
+						<a href="#" class="image featured"><img class="cropped1" src="static/images/lending.png" alt="" /></a>
 						<header>
-							<h3><a href="#">Analyze and Predict the Success of a Movie</a></h3>
+							<h3><a href="#">Credit Risk Modeling of Consumer Loans</a></h3>
 						</header>
-						<p>Machine Learning, Regression and Classification</p>
+						<p>Complete Modeling Process of PD, LGD, EAD</p>
 						<p>Python</p>
 					</article>
+
+					<article>
+						<a href="#" class="image featured"><img class="cropped1" src="static/images/portfolio.png" alt="" /></a>
+						<header>
+							<h3><a href="#">Stock Portfolio, VaR and CVaR </a></h3>
+						</header>
+						<p>Monte Carlo Simulation</p>
+						<p>Python</p>
+					</article>
+
+
 
 					<article>
 						<a href="#" class="image featured"><img class="cropped1" src="static/images/tableau_dashboard.png" alt="" /></a>
@@ -221,14 +232,16 @@
 						<p>Data Visualization</p>
 						<p>Tableau</p>
 					</article>
+
 					<article>
-						<a href="#" class="image featured"><img class="cropped1" src="static/images/lending.png" alt="" /></a>
+						<a href="#" class="image featured"><img class="cropped1" src="static/images/IMDB.png" alt="" /></a>
 						<header>
-							<h3><a href="#">Classification and Prediction of the LendingClub Default </a></h3>
+							<h3><a href="#">Analyze and Predict the Success of a Movie</a></h3>
 						</header>
-						<p>Machine Learning, Random Forest</p>
+						<p>Machine Learning, Regression and Classification</p>
 						<p>Python</p>
 					</article>
+
 
 					<article>
 						<a href="#" class="image featured"><img class="cropped1" src="static/images/flight.png" alt="" /></a>
@@ -248,15 +261,6 @@
 						<p>Python</p>
 					</article>
 
-					<article>
-						<a href="#" class="image featured"><img class="cropped1" src="static/images/cookiecat.jpg" alt="" /></a>
-						<header>
-							<h3><a href="#">Player Retention Analysis of the Mobile Game Cookie Cats</a></h3>
-						</header>
-						<p>A/B Testing </p>
-						<p>Undergoing</p>
-					</article>
-
 
 					<article>
 						<a href="#" class="image featured"><img class="cropped1" src="static/images/yelp.png" alt="" /></a>
@@ -267,14 +271,7 @@
 						<p>Python</p>
 					</article>
 
-					<article>
-						<a href="#" class="image featured"><img class="cropped1" src="static/images/stock.png" alt="" /></a>
-						<header>
-							<h3><a href="#">Financial Performance Analysis of Stock Prices</a></h3>
-						</header>
-						<p>Data Analytics, API</p>
-						<p>Python</p>
-					</article>
+
 					<article>
 						<a href="#" class="image featured"><img class="cropped1" src="static/images/white.png" alt="" /></a>
 						<header>
